--- a/index.html
+++ b/index.html
@@ -5,8 +5,142 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
-
+  <div class="nav-dropdown">
+    <div class="nav-dropdown__close"></div>
+    <ul class="nav-dropdown__list">
+      <li class="nav-dropdown__item">
+        <a href="#">Главная</a>
+        <a href="#">фото и видео</a>
+        <a href="#">Форма отзыва</a>
+        <a href="#">HTML academy</a>
+      </li>
+    </ul>
+  </div>
+  <header class="header">
+    <div class="header__wrap">
+      <div class="header__logo">
+        <a href="/">
+          <img src="http://placehold.it/102x82">
+        </a>
+      </div>
+      <div class="nav__hamburger"></div>
+    </div>
+  </header>
+  <section class="main-img">
+    <div class="main-img__wrap">
+      <div class="main-img__text">
+        <img src="http://placehold.it/280x215">
+      </div>
+    </div>
+  </section>
+  <section class="intro">
+    <div class="intro__wrap">
+      <div class="intro__body">
+        <div class="intro__title">
+          СЕДОНА — небольшой
+          городок в АРИЗОНЕ,
+          зАСЛУЖИвающий большего!
+        </div>
+        Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!
+      </div>
+    </div>
+  </section>
+  <section class="info">
+    <div class="info__wrap">
+      <div class="info__item info-item info-item--accent">
+        <div class="info-item__body">
+          <div class="info-item__title">НАСТОЯЩИЙ ГОРОДОК</div>
+          <div class="info-item__num">№1</div>
+          СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ
+        </div>
+        <div class="info-item__img">
+          <img src="http://placehold.it/320x260">
+        </div>
+        <ul class="features__list">
+          <li class="features__item features__item--house">
+            <div class="features__title">
+              Жилье
+            </div>
+            Рекомендуем пожить в настоящем мотеле, все как в кино!
+          </li>
+          <li class="features__item features__item--souvenirs">
+            <div class="features__title">
+              СУВЕНИРЫ
+            </div>
+            Не только китайского, но и местного производства!
+          </li>
+          <li class="features__item features__item--food">
+            <div class="features__title">
+              ЕДА
+            </div>
+            Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
+          </li>
+        </ul>
+      </div>
+      <div class="info__item info-item info-item--accent">
+        <div class="info-item__body">
+          <div class="info-item__title">ТАМ ЕСТЬ Мост дьявола</div>
+          <div class="info-item__num">№2</div>
+          Да, по нему можно пройти! Если вы осмелитесь, конечно
+        </div>
+        <div class="info-item__img">
+          <img src="http://placehold.it/320x260">
+        </div>
+      </div>
+      <div class="info__item info-item">
+        <div class="info-item__body">
+          <div class="info-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</div>
+          <div class="info-item__num">№3</div>
+          ВСЕ достопримечательности находятся очень близко
+        </div>
+      </div>
+      <div class="info__item info-item">
+        <div class="info-item__body">
+          <div class="info-item__title">КРАСИВАЯ ДОРОГА</div>
+          <div class="info-item__num">№4</div>
+          КРАСИВАЯ ДОРОГА
+        </div>
+      </div>
+      <div class="info__item info-item">
+        <div class="info-item__body">
+          <div class="info-item__title">МАЛО ТУРИСТОВ</div>
+          <div class="info-item__num">№5</div>
+          Большинство едет в гранд каньон
+          и толпится там
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="feedback">
+    <div class="feedback__wrap">
+      <div class="feedback__body">
+        <div class="feedback__title">ЗАИНТЕРЕСОВАЛИСЬ?</div>
+        Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
+        <a href="#" class="btn">НАЙТИ гостиницу</a>
+      </div>
+    </div>
+  </section>
+  <section class="map"></section>
+  <footer class="footer">
+    <div class="footer__hashtag">#visitSEDONA</div>
+    <ul class="social">
+      <li class="social__item">
+        <a href="#">
+          <img src="http://placehold.it/18x14">
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="#">
+          <img src="http://placehold.it/9x18">
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="#">
+          <img src="http://placehold.it/20x14">
+        </a>
+      </li>
+    </ul>
+    <div class="footer__development"><a href="#">Разработано</a></div>
+  </footer>
   </body>
 </html>
