структура страницы Оставьте свой отзыв

--- a/photo.html
+++ b/photo.html
@@ -48,7 +48,12 @@
         <div class="photo__body">
           <div class="photo__title">неродные просторы</div>
           <div class="photo__author">Автор фото: Борис</div>
-          <div class="like">1350</div>
+          <div class="like">
+            <label class="like__set">
+              <input type="checkbox">
+              1350
+            </label>
+          </div>
         </div>
       </div>
       <div class="photo__item">
@@ -60,7 +65,12 @@
         <div class="photo__body">
           <div class="photo__title">Местная растительность</div>
           <div class="photo__author">Автор фото: Сергей</div>
-          <div class="like">143</div>
+          <div class="like">
+            <label class="like__set">
+              <input type="checkbox">
+              143
+            </label>
+          </div>
         </div>
       </div>
       <div class="photo__item">
@@ -72,7 +82,12 @@
         <div class="photo__body">
           <div class="photo__title">Автор фото: Сергей</div>
           <div class="photo__author">Автор фото: Петр</div>
-          <div class="like">96</div>
+          <div class="like">
+            <label class="like__set">
+              <input type="checkbox">
+              96
+            </label>
+          </div>
         </div>
       </div>
       <div class="photo__item">
@@ -84,7 +99,12 @@
         <div class="photo__body">
           <div class="photo__title">Мост дьявола</div>
           <div class="photo__author">Автор фото: Антон</div>
-          <div class="like">254</div>
+          <div class="like">
+            <label class="like__set">
+              <input type="checkbox">
+              254
+            </label>
+          </div>
         </div>
       </div>
     </div>
