--- a/index.html
+++ b/index.html
@@ -1,127 +1,133 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-  <div class="nav-dropdown">
-    <div class="nav-dropdown__close"></div>
-    <ul class="nav-dropdown__list">
-      <li class="nav-dropdown__item">
-        <a href="#">Главная</a>
-        <a href="#">фото и видео</a>
-        <a href="#">Форма отзыва</a>
-        <a href="#">HTML academy</a>
-      </li>
-    </ul>
-  </div>
-  <header class="header">
-    <div class="header__wrap">
-      <div class="header__logo">
-        <a href="/">
-          <img src="http://placehold.it/102x82">
-        </a>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+<div class="nav-dropdown">
+  <div class="nav-dropdown__close"></div>
+  <ul class="nav-dropdown__list">
+    <li class="nav-dropdown__item">
+      <a href="#">Главная</a>
+      <a href="#">фото и видео</a>
+      <a href="#">Форма отзыва</a>
+      <a href="#">HTML academy</a>
+    </li>
+  </ul>
+</div>
+<header class="header">
+  <div class="wrap">
+    <div class="header__logo">
+      <a href="/">
+        <img src="http://placehold.it/102x82">
+      </a>
+    </div>
+    <div class="nav">
       <div class="nav__hamburger"></div>
     </div>
-  </header>
-  <section class="main-img">
-    <div class="main-img__wrap">
-      <div class="main-img__text">
-        <img src="http://placehold.it/280x215">
-      </div>
+  </div>
+</header>
+<section class="main-img">
+  <div class="main-img__wrap">
+    <div class="main-img__text">
+      <img src="http://placehold.it/280x215">
     </div>
-  </section>
-  <section class="intro">
-    <div class="intro__wrap">
-      <div class="intro__body">
-        <div class="intro__title">
-          СЕДОНА — небольшой
-          городок в АРИЗОНЕ,
-          зАСЛУЖИвающий большего!
-        </div>
-        Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!
+  </div>
+</section>
+<section class="intro">
+  <div class="wrap">
+    <div class="intro__body">
+      <div class="intro__title">
+        Седона — небольшой
+        городок в Аризоне,
+        заслуживающий большего!
       </div>
+      <div class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</div>
     </div>
-  </section>
-  <section class="info">
-    <div class="info__wrap">
-      <div class="info__item info-item info-item--accent">
-        <div class="info-item__body">
-          <div class="info-item__title">НАСТОЯЩИЙ ГОРОДОК</div>
-          <div class="info-item__num">№1</div>
-          СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ
-        </div>
-        <div class="info-item__img">
-          <img src="http://placehold.it/320x260">
-        </div>
+  </div>
+</section>
+<section class="info">
+  <div class="wrap">
+    <div class="info__item info-item info-item--accent">
+      <div class="info-item__body">
+        <div class="info-item__title">Настоящий городок</div>
+        <div class="info-item__num">№1</div>
+        <div class="info-item__text">Седона не аттракцион для туристов, там течет своя жизнь</div>
+      </div>
+      <div class="info-item__img">
+        <img src="http://placehold.it/320x260">
+      </div>
+      <div class="features">
         <ul class="features__list">
           <li class="features__item features__item--house">
             <div class="features__title">
               Жилье
             </div>
-            Рекомендуем пожить в настоящем мотеле, все как в кино!
+            <div class="features__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
           </li>
           <li class="features__item features__item--souvenirs">
             <div class="features__title">
-              СУВЕНИРЫ
+              Сувениры
             </div>
-            Не только китайского, но и местного производства!
+            <div class="features__text">Не только китайского, но и местного производства!</div>
           </li>
           <li class="features__item features__item--food">
             <div class="features__title">
-              ЕДА
+              Еда
             </div>
-            Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
+            <div class="features__text">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</div>
           </li>
         </ul>
       </div>
-      <div class="info__item info-item info-item--accent">
-        <div class="info-item__body">
-          <div class="info-item__title">ТАМ ЕСТЬ Мост дьявола</div>
-          <div class="info-item__num">№2</div>
-          Да, по нему можно пройти! Если вы осмелитесь, конечно
-        </div>
-        <div class="info-item__img">
-          <img src="http://placehold.it/320x260">
-        </div>
+    </div>
+    <div class="info__item info-item info-item--accent">
+      <div class="info-item__body">
+        <div class="info-item__title">Там есть мост дьявола</div>
+        <div class="info-item__num">№2</div>
+        <div class="info-item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</div>
       </div>
-      <div class="info__item info-item">
-        <div class="info-item__body">
-          <div class="info-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</div>
-          <div class="info-item__num">№3</div>
-          ВСЕ достопримечательности находятся очень близко
-        </div>
+      <div class="info-item__img">
+        <img src="http://placehold.it/320x260">
       </div>
-      <div class="info__item info-item">
-        <div class="info-item__body">
-          <div class="info-item__title">КРАСИВАЯ ДОРОГА</div>
-          <div class="info-item__num">№4</div>
-          КРАСИВАЯ ДОРОГА
-        </div>
+    </div>
+    <div class="info__item info-item">
+      <div class="info-item__body">
+        <div class="info-item__title">Небольшая площадь</div>
+        <div class="info-item__num">№3</div>
+        <div class="info-item__text">Все достопримечательности находятся очень близко</div>
       </div>
-      <div class="info__item info-item">
-        <div class="info-item__body">
-          <div class="info-item__title">МАЛО ТУРИСТОВ</div>
-          <div class="info-item__num">№5</div>
-          Большинство едет в гранд каньон
+    </div>
+    <div class="info__item info-item">
+      <div class="info-item__body">
+        <div class="info-item__title">Красивая дорога</div>
+        <div class="info-item__num">№4</div>
+        <div class="info-item__text">Красивая дорога</div>
+      </div>
+    </div>
+    <div class="info__item info-item">
+      <div class="info-item__body">
+        <div class="info-item__title">Мало туристов</div>
+        <div class="info-item__num">№5</div>
+        <div class="info-item__text">Большинство едет в гранд каньон
           и толпится там
         </div>
       </div>
     </div>
-  </section>
-  <section class="feedback">
-    <div class="feedback__wrap">
-      <div class="feedback__body">
-        <div class="feedback__title">ЗАИНТЕРЕСОВАЛИСЬ?</div>
-        Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
-        <a href="#" class="btn">НАЙТИ гостиницу</a>
-      </div>
+  </div>
+</section>
+<section class="feedback">
+  <div class="feedback__wrap">
+    <div class="feedback__body">
+      <div class="feedback__title">Заинтерисовались?</div>
+      Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
+      <a href="#" class="btn">Найти гостиницу</a>
     </div>
-  </section>
-  <section class="map"></section>
-  <footer class="footer">
+  </div>
+</section>
+<section class="map"></section>
+<footer class="footer">
+  <div class="wrap">
     <div class="footer__hashtag">#visitSEDONA</div>
     <ul class="social">
       <li class="social__item">
@@ -140,7 +146,8 @@
         </a>
       </li>
     </ul>
-    <div class="footer__development"><a href="#">Разработано</a></div>
-  </footer>
-  </body>
+    <div class="footer__development"><a href="#">Разработано <img src="http://placehold.it/27x34" alt="Разработано в HTML Academy"></a></div>
+  </div>
+</footer>
+</body>
 </html>
