--- a/photo.html
+++ b/photo.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-  <div class="nav-dropdown">
-    <div class="nav-dropdown__close"></div>
-    <ul class="nav-dropdown__list">
-      <li class="nav-dropdown__item">
-        <a href="#">Главная</a>
-        <a href="#">фото и видео</a>
-        <a href="#">Форма отзыва</a>
-        <a href="#">HTML academy</a>
-      </li>
-    </ul>
-  </div>
-  <header class="header">
-    <div class="header__wrap">
-      <div class="header__logo">
-        <a href="/">
-          <img src="http://placehold.it/102x82">
-        </a>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+<div class="nav-dropdown">
+  <div class="nav-dropdown__close"></div>
+  <ul class="nav-dropdown__list">
+    <li class="nav-dropdown__item">
+      <a href="#">Главная</a>
+      <a href="#">фото и видео</a>
+      <a href="#">Форма отзыва</a>
+      <a href="#">HTML academy</a>
+    </li>
+  </ul>
+</div>
+<header class="header">
+  <div class="wrap">
+    <div class="header__logo">
+      <a href="/">
+        <img src="http://placehold.it/102x82">
+      </a>
+    </div>
+    <div class="nav">
       <div class="nav__hamburger"></div>
     </div>
-  </header>
-  <section class="main-img main-img--inner-page">
-    <div class="main-img__wrap">
-      <div class="main-img__text">
-        <img src="http://placehold.it/230x40">
-      </div>
+  </div>
+</header>
+<section class="main-img main-img--inner-page">
+  <div class="wrap">
+    <div class="main-img__text">
+      <img src="http://placehold.it/230x40">
     </div>
-  </section>
-  <section class="middle">
-    <h1>Фото и видео</h1>
-    <p>
+  </div>
+</section>
+<section class="middle">
+  <div class="wrap">
+    <h1 class="h1">Фото и видео</h1>
+    <p class="middle__text">
       Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
     </p>
     <div class="photo">
@@ -49,10 +52,7 @@
           <div class="photo__title">неродные просторы</div>
           <div class="photo__author">Автор фото: Борис</div>
           <div class="like">
-            <label class="like__set">
-              <input type="checkbox">
-              1350
-            </label>
+            <a href="#">1350</a>
           </div>
         </div>
       </div>
@@ -66,10 +66,7 @@
           <div class="photo__title">Местная растительность</div>
           <div class="photo__author">Автор фото: Сергей</div>
           <div class="like">
-            <label class="like__set">
-              <input type="checkbox">
-              143
-            </label>
+            <a href="#">143</a>
           </div>
         </div>
       </div>
@@ -83,10 +80,7 @@
           <div class="photo__title">Автор фото: Сергей</div>
           <div class="photo__author">Автор фото: Петр</div>
           <div class="like">
-            <label class="like__set">
-              <input type="checkbox">
-              96
-            </label>
+            <a href="#">96</a>
           </div>
         </div>
       </div>
@@ -100,24 +94,29 @@
           <div class="photo__title">Мост дьявола</div>
           <div class="photo__author">Автор фото: Антон</div>
           <div class="like">
-            <label class="like__set">
-              <input type="checkbox">
-              254
-            </label>
+            <a href="#">96</a>
           </div>
         </div>
       </div>
     </div>
-    <h2>Все еще сомневаетесь?</h2>
-    <p>Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+    <h2 class="h2">Все еще сомневаетесь?</h2>
+    <p class="middle__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
     <div class="video">
       <div class="video__item">
-        <video controls preload="metadata" width="320" height="199">
+        <video preload="metadata" width="320" height="199">
         </video>
+        <div class="video__controls">
+          <div class="video__progress-bar"></div>
+          <a href="#" class="video__restart"></a>
+          <a href="#" class="video__captions"></a>
+          <a href="#" class="video__fullscreen"></a>
+        </div>
       </div>
     </div>
-  </section>
-  <footer class="footer">
+  </div>
+</section>
+<footer class="footer">
+  <div class="wrap">
     <div class="footer__hashtag">#visitSEDONA</div>
     <ul class="social">
       <li class="social__item">
@@ -136,7 +135,9 @@
         </a>
       </li>
     </ul>
-    <div class="footer__development"><a href="#">Разработано</a></div>
-  </footer>
-  </body>
+    <div class="footer__development"><a href="#">Разработано <img src="http://placehold.it/27x34"
+                                                                  alt="Разработано в HTML Academy"></a></div>
+  </div>
+</footer>
+</body>
 </html>
