--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 <body>
 <div class="nav-dropdown">
@@ -10,8 +12,14 @@
   <ul class="nav-dropdown__list">
     <li class="nav-dropdown__item">
       <a href="#">Главная</a>
+    </li>
+    <li class="nav-dropdown__item">
       <a href="#">фото и видео</a>
+    </li>
+    <li class="nav-dropdown__item">
       <a href="#">Форма отзыва</a>
+    </li>
+    <li class="nav-dropdown__item">
       <a href="#">HTML academy</a>
     </li>
   </ul>
@@ -20,7 +28,7 @@
   <div class="wrap">
     <div class="header__logo">
       <a href="/">
-        <img src="http://placehold.it/102x82">
+        <img src="/img/logo-sedona-mobile.svg">
       </a>
     </div>
     <div class="nav">
@@ -29,9 +37,9 @@
   </div>
 </header>
 <section class="main-img">
-  <div class="main-img__wrap">
+  <div class="wrap">
     <div class="main-img__text">
-      <img src="http://placehold.it/280x215">
+      <img src="/img/text-sedona-index.svg" alt="">
     </div>
   </div>
 </section>
@@ -56,7 +64,7 @@
         <div class="info-item__text">Седона не аттракцион для туристов, там течет своя жизнь</div>
       </div>
       <div class="info-item__img">
-        <img src="http://placehold.it/320x260">
+        <img src="/img/photo-city@1x.jpg">
       </div>
       <div class="features">
         <ul class="features__list">
@@ -88,7 +96,7 @@
         <div class="info-item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</div>
       </div>
       <div class="info-item__img">
-        <img src="http://placehold.it/320x260">
+        <img src="/img/photo-4-mobile@1x.jpg">
       </div>
     </div>
     <div class="info__item info-item">
@@ -117,10 +125,10 @@
   </div>
 </section>
 <section class="feedback">
-  <div class="feedback__wrap">
+  <div class="wrap">
     <div class="feedback__body">
       <div class="feedback__title">Заинтерисовались?</div>
-      Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
+      <div class="feedback__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</div>
       <a href="#" class="btn">Найти гостиницу</a>
     </div>
   </div>
@@ -132,21 +140,21 @@
     <ul class="social">
       <li class="social__item">
         <a href="#">
-          <img src="http://placehold.it/18x14">
+          <img src="/img/icon-twitter.svg">
         </a>
       </li>
       <li class="social__item">
         <a href="#">
-          <img src="http://placehold.it/9x18">
+          <img src="/img/icon-facebook.svg">
         </a>
       </li>
       <li class="social__item">
         <a href="#">
-          <img src="http://placehold.it/20x14">
+          <img src="/img/icon-youtube.svg">
         </a>
       </li>
     </ul>
-    <div class="footer__development"><a href="#">Разработано <img src="http://placehold.it/27x34" alt="Разработано в HTML Academy"></a></div>
+    <div class="footer__development"><a href="#">Разработано <img src="/img/logo-htmlacademy.svg" alt="Разработано в HTML Academy"></a></div>
   </div>
 </footer>
 </body>
