--- a/photo.html
+++ b/photo.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 <body>
 <div class="nav-dropdown">
@@ -10,8 +12,14 @@
   <ul class="nav-dropdown__list">
     <li class="nav-dropdown__item">
       <a href="#">Главная</a>
+    </li>
+    <li class="nav-dropdown__item">
       <a href="#">фото и видео</a>
+    </li>
+    <li class="nav-dropdown__item">
       <a href="#">Форма отзыва</a>
+    </li>
+    <li class="nav-dropdown__item">
       <a href="#">HTML academy</a>
     </li>
   </ul>
@@ -20,7 +28,7 @@
   <div class="wrap">
     <div class="header__logo">
       <a href="/">
-        <img src="http://placehold.it/102x82">
+        <img src="/img/logo-sedona-mobile.svg">
       </a>
     </div>
     <div class="nav">
@@ -31,7 +39,7 @@
 <section class="main-img main-img--inner-page">
   <div class="wrap">
     <div class="main-img__text">
-      <img src="http://placehold.it/230x40">
+      <img src="/img/text-sedona.svg">
     </div>
   </div>
 </section>
@@ -45,7 +53,7 @@
       <div class="photo__item">
         <div class="photo__img">
           <a href="#">
-            <img src="http://placehold.it/280x280">
+            <img src="/img/photo-1-mobile@1x.jpg">
           </a>
         </div>
         <div class="photo__body">
@@ -59,7 +67,7 @@
       <div class="photo__item">
         <div class="photo__img">
           <a href="#">
-            <img src="http://placehold.it/280x280">
+            <img src="/img/photo-2-mobile@1x.jpg">
           </a>
         </div>
         <div class="photo__body">
@@ -73,7 +81,7 @@
       <div class="photo__item">
         <div class="photo__img">
           <a href="#">
-            <img src="http://placehold.it/280x280">
+            <img src="/img/photo-3-mobile@1x.jpg">
           </a>
         </div>
         <div class="photo__body">
@@ -87,7 +95,7 @@
       <div class="photo__item">
         <div class="photo__img">
           <a href="#">
-            <img src="http://placehold.it/280x280">
+            <img src="/img/photo-4-mobile@1x.jpg">
           </a>
         </div>
         <div class="photo__body">
@@ -99,11 +107,11 @@
         </div>
       </div>
     </div>
-    <h2 class="h2">Все еще сомневаетесь?</h2>
+    <h1 class="h1">Все еще сомневаетесь?</h1>
     <p class="middle__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
     <div class="video">
       <div class="video__item">
-        <video preload="metadata" width="320" height="199">
+        <video preload="metadata" width="320" height="199" poster="/img/video-mobile@1x.jpg">
         </video>
         <div class="video__controls">
           <div class="video__progress-bar"></div>
@@ -121,22 +129,21 @@
     <ul class="social">
       <li class="social__item">
         <a href="#">
-          <img src="http://placehold.it/18x14">
+          <img src="/img/icon-twitter.svg">
         </a>
       </li>
       <li class="social__item">
         <a href="#">
-          <img src="http://placehold.it/9x18">
+          <img src="/img/icon-facebook.svg">
         </a>
       </li>
       <li class="social__item">
         <a href="#">
-          <img src="http://placehold.it/20x14">
+          <img src="/img/icon-youtube.svg">
         </a>
       </li>
     </ul>
-    <div class="footer__development"><a href="#">Разработано <img src="http://placehold.it/27x34"
-                                                                  alt="Разработано в HTML Academy"></a></div>
+    <div class="footer__development"><a href="#">Разработано <img src="/img/logo-htmlacademy.svg" alt="Разработано в HTML Academy"></a></div>
   </div>
 </footer>
 </body>
