Главная. Адаптивная структура

--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" media="all" href="css/reset.css">
   <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 <body>
@@ -45,7 +46,7 @@
 </section>
 <section class="middle">
   <div class="wrap">
-    <h1 class="h1">Оставьте свой отзыв</h1>
+    <h1 class="middle__h1">Оставьте свой отзыв</h1>
     <p class="middle__text">
       Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
     </p>
@@ -103,25 +104,25 @@
           достопримечательности:
         </div>
         <div class="form__line">
-          <label class="checbox">
+          <label class="checkbox">
             <input type="checkbox" checked>
             Мост Дьявола
           </label>
         </div>
         <div class="form__line">
-          <label class="checbox">
+          <label class="checkbox">
             <input type="checkbox" checked>
             Слайд-парк
           </label>
         </div>
         <div class="form__line">
-          <label class="checbox">
+          <label class="checkbox">
             <input type="checkbox">
             Гора-Колокол
           </label>
         </div>
         <div class="form__line">
-          <label class="checbox">
+          <label class="checkbox">
             <input type="checkbox" checked>
             Красные скалы
           </label>
