--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" media="all" href="css/reset.css">
   <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 <body>
@@ -45,7 +46,7 @@
 </section>
 <section class="middle">
   <div class="wrap">
-    <h1 class="h1">Фото и видео</h1>
+    <h1 class="middle__h1">Фото и видео</h1>
     <p class="middle__text">
       Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
     </p>
@@ -107,7 +108,7 @@
         </div>
       </div>
     </div>
-    <h1 class="h1">Все еще сомневаетесь?</h1>
+    <h2 class="middle__h2">Все еще сомневаетесь?</h2>
     <p class="middle__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
     <div class="video">
       <div class="video__item">
