--- a/form.html
+++ b/form.html
@@ -9,37 +9,21 @@
 </head>
 <body>
 <div class="wrapper">
-  <div class="nav-dropdown">
-    <div class="nav-dropdown__close"></div>
-    <ul class="nav-dropdown__list">
-      <li class="nav-dropdown__item">
-        <a href="#">Главная</a>
-      </li>
-      <li class="nav-dropdown__item">
-        <a href="#">фото и видео</a>
-      </li>
-      <li class="nav-dropdown__item">
-        <a href="#">Форма отзыва</a>
-      </li>
-      <li class="nav-dropdown__item">
-        <a href="#">HTML academy</a>
-      </li>
-    </ul>
-  </div>
   <header class="header">
     <div class="nav">
       <nav class="nav__list">
         <a href="#" class="nav__item">Главная</a>
         <a href="#" class="nav__item">ФОТО И ВИДЕО</a>
-        <div class="header__logo">
-          <a href="/">
-            <img src="/img/logo-sedona-mobile.svg">
-          </a>
-        </div>
         <a href="#" class="nav__item">Форма отзыва</a>
         <a href="#" class="nav__item">HTML Academy</a>
+        <div class="nav__close"></div>
       </nav>
       <div class="nav__hamburger"></div>
+    </div>
+    <div class="header__logo">
+      <a href="/">
+        <img src="/img/logo-sedona-mobile.svg">
+      </a>
     </div>
   </header>
   <section class="main-img main-img--inner-page">
@@ -56,7 +40,7 @@
       Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
     </p>
     <form action="" class="form">
-      <div class="form__group form__group--fio">
+      <div class="form__group form__group--col-2 form__group--right">
         <div class="form__group-title">Представьтесь:</div>
         <div class="form__line form__line--inline">
           <label class="form__label">Имя*:</label>
@@ -71,25 +55,25 @@
           <div class="form__field-wrap"><input type="text" value="Александрович" class="form__field"></div>
         </div>
       </div>
-      <div class="form__group form__group--contacts">
+      <div class="form__group form__group--col-1">
         <div class="form__group-title">Контактная информация:</div>
-        <div class="form__group-contacts">
+        <div class="form__group-desktop-inline">
           <div class="form__line">
             <label class="form__label"><span class="desktop-hide">Контактный </span>телефон*:</label>
             <div class="form__field-wrap">
-              <input type="text" required placeholder="Введите телефон" class="form__field form__field--tel">
+              <div class="form__field-tel"><input type="text" required placeholder="Введите телефон" class="form__field"></div>
               <div class="form__error-text">Ошибка, перепроверьте номер</div>
             </div>
           </div>
           <div class="form__line">
             <label class="form__label">Электронная почта*:</label>
             <div class="form__field-wrap">
-              <input type="text" required placeholder="Введите e-mail" class="form__field form__field--mail">
+              <div class="form__field-mail"><input type="text" required placeholder="Введите e-mail" class="form__field"></div>
             </div>
           </div>
         </div>
       </div>
-      <div class="form__group form__group--impression">
+      <div class="form__group form__group--col-2 form__group--left form__group--order-1 form__group--radio">
         <div class="form__group-title">Ваше общее впечатление:</div>
         <div class="form__line">
           <label class="form__radio">
@@ -110,42 +94,38 @@
           </label>
         </div>
       </div>
-      <div class="form__group form__group--showplace">
+      <div class="form__group form__group--col-1">
         <div class="form__group-title">посещенные
           достопримечательности:
         </div>
-        <div class="form__group-checkbox group-checkbox">
-          <div class="group-checkbox__col-2">
-            <div class="form__line">
-              <label class="form__checkbox">
-                <input type="checkbox" checked>
-                <span class="form__checkbox-label">Мост Дьявола</span>
-              </label>
-            </div>
-            <div class="form__line">
-              <label class="form__checkbox">
-                <input type="checkbox" checked>
-                <span class="form__checkbox-label">Слайд-парк</span>
-              </label>
-            </div>
+        <div class="form__group-checkbox">
+          <div class="form__line">
+            <label class="form__checkbox">
+              <input type="checkbox" checked>
+              <span class="form__checkbox-label">Мост Дьявола</span>
+            </label>
           </div>
-          <div class="group-checkbox__col-2">
-            <div class="form__line">
-              <label class="form__checkbox">
-                <input type="checkbox">
-                <span class="form__checkbox-label">Гора-Колокол</span>
-              </label>
-            </div>
-            <div class="form__line">
-              <label class="form__checkbox">
-                <input type="checkbox" checked>
-                <span class="form__checkbox-label">Красные скалы</span>
-              </label>
-            </div>
+          <div class="form__line">
+            <label class="form__checkbox">
+              <input type="checkbox" checked>
+              <span class="form__checkbox-label">Слайд-парк</span>
+            </label>
+          </div>
+          <div class="form__line">
+            <label class="form__checkbox">
+              <input type="checkbox">
+              <span class="form__checkbox-label">Гора-Колокол</span>
+            </label>
+          </div>
+          <div class="form__line">
+            <label class="form__checkbox">
+              <input type="checkbox" checked>
+              <span class="form__checkbox-label">Красные скалы</span>
+            </label>
           </div>
         </div>
       </div>
-      <div class="form__group form__group--review">
+      <div class="form__group form__group--col-1">
         <div class="form__group-title">Опишите свои эмоции:</div>
         <div class="form__line">
           <textarea placeholder="Опишите подробно все свои восторги" class="form__textarea"></textarea>
@@ -159,25 +139,31 @@
   </section>
   <footer class="footer">
     <div class="footer__hashtag">#visitSEDONA</div>
-    <ul class="social__social social">
+    <ul class="footer__social social">
       <li class="social__item">
-        <a href="#">
+        <a class="social__link" href="#">
           <img src="/img/icon-twitter.svg">
         </a>
       </li>
       <li class="social__item">
-        <a href="#">
+        <a class="social__link" href="#">
           <img src="/img/icon-facebook.svg">
         </a>
       </li>
       <li class="social__item">
-        <a href="#">
+        <a class="social__link" href="#">
           <img src="/img/icon-youtube.svg">
         </a>
       </li>
     </ul>
-    <div class="footer__development"><a href="#">Разработано <img src="/img/logo-htmlacademy.svg"
-                                                                  alt="Разработано в HTML Academy"></a></div>
+    <div class="footer__development">
+      <a class="footer__development-link" href="#" title="Разработано в HTML Academy">
+        Разработано
+        <svg class="footer__development-img" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+          <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+        </svg>
+      </a>
+    </div>
   </footer>
 </div>
 </body>
