адаптация картинок, меню и попапы

--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
 <body>
 <div class="wrapper">
   <header class="header">
-    <div class="nav">
+    <div class="nav nav--no-js">
       <nav class="nav__list">
         <a href="#" class="nav__item">Главная</a>
         <a href="#" class="nav__item">ФОТО И ВИДЕО</a>
@@ -22,16 +22,17 @@
     </div>
     <div class="header__logo">
       <a href="/">
-        <img src="/img/logo-sedona-mobile.svg">
+        <picture>
+          <source srcset="/img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
+          <source srcset="/img/logo-sedona-tablet.svg" media="(min-width: 768px)">
+          <img src="/img/logo-sedona-mobile.svg">
+        </picture>
       </a>
     </div>
   </header>
   <section class="main-img main-img--inner-page">
-    <div class="wrap">
-      <div class="main-img__text">
-        <img src="/img/text-sedona.svg">
-      </div>
-      <div class="main-img__triangle"></div>
+    <div class="main-img__text">
+      <img src="/img/text-sedona.svg">
     </div>
   </section>
   <section class="middle">
@@ -61,14 +62,16 @@
           <div class="form__line">
             <label class="form__label"><span class="desktop-hide">Контактный </span>телефон*:</label>
             <div class="form__field-wrap">
-              <div class="form__field-tel"><input type="text" required placeholder="Введите телефон" class="form__field"></div>
+              <div class="form__field-ico form__field-ico--tel"><input type="text" required placeholder="Введите телефон"
+                                                  class="form__field"></div>
               <div class="form__error-text">Ошибка, перепроверьте номер</div>
             </div>
           </div>
           <div class="form__line">
             <label class="form__label">Электронная почта*:</label>
             <div class="form__field-wrap">
-              <div class="form__field-mail"><input type="text" required placeholder="Введите e-mail" class="form__field"></div>
+              <div class="form__field-ico form__field-ico--mail"><input type="text" required placeholder="Введите e-mail"
+                                                   class="form__field"></div>
             </div>
           </div>
         </div>
@@ -135,6 +138,30 @@
         <input type="submit" value="Отправить отзыв" class="btn">
         <div class="form__note">* — обязательные поля</div>
       </div>
+      <div class="popup popup--success">
+        <div class="popup__title">
+          Ваш отзыв отправлен!
+        </div>
+        <div class="popup__body">
+          Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+          В ближайшее время мы опубликуем его на сайте.
+        </div>
+        <div class="popup__btn-pane">
+          <a href="#" class="btn js-popup-close">Закрыть окно</a>
+        </div>
+      </div>
+      <div class="popup popup--error">
+        <div class="popup__title">
+          Что-то пошло
+          не так!
+        </div>
+        <div class="popup__body">
+          Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+        </div>
+        <div class="popup__btn-pane">
+          <a href="#" class="btn js-popup-close">OK</a>
+        </div>
+      </div>
     </form>
   </section>
   <footer class="footer">
@@ -142,17 +169,27 @@
     <ul class="footer__social social">
       <li class="social__item">
         <a class="social__link" href="#">
-          <img src="/img/icon-twitter.svg">
+          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+            <g id="W6EeEF_1_">
+              <g>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
+              </g>
+            </g>
+          </svg>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link" href="#">
-          <img src="/img/icon-facebook.svg">
+          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+            <path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+          </svg>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link" href="#">
-          <img src="/img/icon-youtube.svg">
+          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+            <path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+          </svg>
         </a>
       </li>
     </ul>
@@ -166,5 +203,7 @@
     </div>
   </footer>
 </div>
+<script type="text/javascript" src="/js/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
